--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
     <h1>This is our heading</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse adipisci fugit molestias ducimus dolorum consectetur inventore aliquam sequi illo provident ipsam dolorem error, tempore, veniam, fugiat reiciendis. Molestias, natus tempore.</p>
+    <img src="/assets/img/neom-g6Me5mUQQIQ-unsplash.jpg" alt="">
 </body>
 </html>
